[package]
name = "zenoh"
readme = "../README.md"

[package.rust-version]
workspace = true

[package.version]
workspace = true

[package.repository]
workspace = true

[package.homepage]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.categories]
workspace = true

[package.description]
workspace = true

[package.metadata]
[package.metadata.docs]
[package.metadata.docs.rs]
features = [ "unstable" ]

[package.metadata.deb]
name = "zenoh"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2024 ZettaScale Technology"
section = "net"
license-file = [ "../LICENSE", "0" ]
depends = "zenohd (=0.11.0-dev-150-g1c8ed89b), zenoh-plugin-rest (=0.11.0-dev-150-g1c8ed89b), zenoh-plugin-storage-manager (=0.11.0-dev-150-g1c8ed89b)"
maintainer-scripts = ".deb"
assets = [ [ "../README.md", "README.md", "644" ] ]

[badges]
[badges.maintenance]
status = "actively-developed"

[features]
auth_pubkey = [ "zenoh-transport/auth_pubkey" ]
auth_usrpwd = [ "zenoh-transport/auth_usrpwd" ]
complete_n = [ "zenoh-codec/complete_n" ]
shared-memory = [ "zenoh-shm", "zenoh-protocol/shared-memory", "zenoh-transport/shared-memory" ]
stats = [ "zenoh-transport/stats", "zenoh-protocol/stats" ]
transport_multilink = [ "zenoh-transport/transport_multilink" ]
transport_compression = [ "zenoh-transport/transport_compression" ]
transport_quic = [ "zenoh-transport/transport_quic" ]
transport_serial = [ "zenoh-transport/transport_serial" ]
transport_unixpipe = [ "zenoh-transport/transport_unixpipe" ]
transport_tcp = [ "zenoh-transport/transport_tcp" ]
transport_tls = [ "zenoh-transport/transport_tls" ]
transport_udp = [ "zenoh-transport/transport_udp" ]
transport_unixsock-stream = [ "zenoh-transport/transport_unixsock-stream" ]
transport_ws = [ "zenoh-transport/transport_ws" ]
unstable = []
default = [ "auth_pubkey", "auth_usrpwd", "transport_multilink", "transport_compression", "transport_quic", "transport_tcp", "transport_tls", "transport_udp", "transport_unixsock-stream", "transport_ws" ]

[dependencies]
[dependencies.async-global-executor]
workspace = true

[dependencies.async-std]
workspace = true
features = [ "attributes" ]

[dependencies.async-trait]
workspace = true

[dependencies.base64]
workspace = true

[dependencies.const_format]
workspace = true

[dependencies.env_logger]
workspace = true

[dependencies.event-listener]
workspace = true

[dependencies.flume]
workspace = true

[dependencies.form_urlencoded]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.git-version]
workspace = true

[dependencies.lazy_static]
workspace = true

[dependencies.log]
workspace = true

[dependencies.ordered-float]
workspace = true

[dependencies.paste]
workspace = true

[dependencies.petgraph]
workspace = true

[dependencies.rand]
workspace = true
features = [ "default" ]

[dependencies.regex]
workspace = true

[dependencies.serde]
workspace = true
features = [ "default" ]

[dependencies.serde_json]
workspace = true

[dependencies.socket2]
workspace = true

[dependencies.stop-token]
workspace = true

[dependencies.uhlc]
workspace = true
features = [ "default" ]

[dependencies.uuid]
workspace = true
features = [ "default" ]

[dependencies.vec_map]
workspace = true

[dependencies.zenoh-buffers]
workspace = true
features = [ "std" ]

[dependencies.zenoh-codec]
workspace = true

[dependencies.zenoh-collections]
workspace = true
features = [ "std" ]

[dependencies.zenoh-config]
workspace = true

[dependencies.zenoh-core]
workspace = true

[dependencies.zenoh-crypto]
workspace = true

[dependencies.zenoh-keyexpr]
workspace = true

[dependencies.zenoh-link]
workspace = true

[dependencies.zenoh-macros]
workspace = true

[dependencies.zenoh-plugin-trait]
workspace = true

[dependencies.zenoh-protocol]
workspace = true
features = [ "std" ]

[dependencies.zenoh-result]
workspace = true

[dependencies.zenoh-shm]
workspace = true
optional = true

[dependencies.zenoh-sync]
workspace = true

[dependencies.zenoh-transport]
workspace = true

[dependencies.zenoh-util]
workspace = true

[build-dependencies]
[build-dependencies.rustc_version]
workspace = true

[lib]
name = "zenoh"