[package]
name = "zenoh-plugin-rest"
categories = [ "network-programming", "web-programming::http-server" ]
description = "The zenoh REST plugin"

[package.rust-version]
workspace = true

[package.version]
workspace = true

[package.repository]
workspace = true

[package.homepage]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.metadata]
[package.metadata.deb]
name = "zenoh-plugin-rest"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2024 ZettaScale Technology"
section = "net"
license-file = [ "../../LICENSE", "0" ]
depends = "zenohd (=0.11.0-dev-158-g0bdd1360)"

[features]
default = [ "no_mangle", "zenoh/default" ]
no_mangle = []

[lib]
name = "zenoh_plugin_rest"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
[dependencies.anyhow]
workspace = true
features = [ "default" ]

[dependencies.async-std]
workspace = true
features = [ "default", "attributes" ]

[dependencies.base64]
workspace = true

[dependencies.const_format]
workspace = true

[dependencies.env_logger]
workspace = true

[dependencies.flume]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.git-version]
workspace = true

[dependencies.http-types]
workspace = true

[dependencies.lazy_static]
workspace = true

[dependencies.log]
workspace = true

[dependencies.schemars]
workspace = true

[dependencies.serde]
workspace = true
features = [ "default" ]

[dependencies.serde_json]
workspace = true

[dependencies.tide]
workspace = true

[dependencies.zenoh]
workspace = true
features = [ "unstable" ]

[dependencies.zenoh-plugin-trait]
workspace = true

[dependencies.zenoh-result]
workspace = true

[dependencies.zenoh-util]
workspace = true

[build-dependencies]
[build-dependencies.rustc_version]
workspace = true

[build-dependencies.schemars]
workspace = true

[build-dependencies.serde]
workspace = true
features = [ "default" ]

[build-dependencies.serde_json]
workspace = true

[build-dependencies.jsonschema]
workspace = true

[dev-dependencies]
[dev-dependencies.clap]
workspace = true

[[example]]
name = "z_serve_sse"
path = "examples/z_serve_sse.rs"