[package]
name = "zenoh-plugin-storage-manager"
description = "The zenoh storages plugin."

[package.rust-version]
workspace = true

[package.version]
workspace = true

[package.repository]
workspace = true

[package.homepage]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.categories]
workspace = true

[package.metadata]
[package.metadata.deb]
name = "zenoh-plugin-storage-manager"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2024 ZettaScale Technology"
section = "net"
license-file = [ "../../LICENSE", "0" ]
depends = "zenohd (=0.11.0-dev-158-g0bdd1360)"

[features]
default = [ "no_mangle", "zenoh/default" ]
no_mangle = []

[lib]
name = "zenoh_plugin_storage_manager"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
[dependencies.async-std]
workspace = true
features = [ "default" ]

[dependencies.async-trait]
workspace = true

[dependencies.crc]
workspace = true

[dependencies.const_format]
workspace = true

[dependencies.derive-new]
workspace = true

[dependencies.env_logger]
workspace = true

[dependencies.flume]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.git-version]
workspace = true

[dependencies.libloading]
workspace = true

[dependencies.log]
workspace = true

[dependencies.serde]
workspace = true
features = [ "default" ]

[dependencies.serde_json]
workspace = true

[dependencies.urlencoding]
workspace = true

[dependencies.zenoh]
workspace = true
features = [ "unstable" ]

[dependencies.zenoh-collections]
workspace = true

[dependencies.zenoh-core]
workspace = true

[dependencies.zenoh-keyexpr]
workspace = true

[dependencies.zenoh-plugin-trait]
workspace = true

[dependencies.zenoh-result]
workspace = true

[dependencies.zenoh-util]
workspace = true

[dependencies.zenoh_backend_traits]
workspace = true

[build-dependencies]
[build-dependencies.rustc_version]
workspace = true

[build-dependencies.zenoh_backend_traits]
workspace = true

[build-dependencies.schemars]
workspace = true

[build-dependencies.serde]
workspace = true
features = [ "default" ]

[build-dependencies.serde_json]
workspace = true

[build-dependencies.jsonschema]
workspace = true

[dev-dependencies]
[dev-dependencies.async-global-executor]
workspace = true