[package]
rust-version = { workspace = true }
name = "zenoh-link-custom"
version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
description = "Internal crate for zenoh."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
transport_custom = []

[dependencies]
async-trait = { workspace = true }
tracing = {workspace = true}
rand = { workspace = true, features = ["default"] }
zenoh-buffers = { workspace = true }
zenoh-collections = { workspace = true }
zenoh-core = { workspace = true }
zenoh-config = { workspace = true }
zenoh-link-commons = { workspace = true }
zenoh-protocol = { workspace = true }
zenoh-result = { workspace = true }
zenoh-runtime = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs", "io-util", "macros"] }
tokio-util = { workspace = true, features = ["rt"] }

[target.'cfg(unix)'.dependencies]
unix-named-pipe = "0.2.0"
nix = { workspace = true }
filepath = "0.1.2"

[target.'cfg(all(not(target_os="macos"), unix))'.dependencies]
advisory-lock = "0.3.0"
